--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1349,7 +1349,7 @@ body  {
 }
 
 .intro {
-  width: 60%;
+  width: 40%;
   margin: 0 auto;
   /*margin-top: 5%;
   margin-bottom: 10%;
@@ -1389,4 +1389,19 @@ body  {
 
 #ConsciOS {
   padding-left: 10%;
+}
+
+.nav-buttons {
+  vertical-align: middle;
+  padding-top: 10px;
+}
+
+.banner {
+  background-image:
+      linear-gradient(to bottom, rgba(255,255,255,0), #2c2c2d),
+      url('/assets/img/close_up.png'); /* Replace with your image path */
+  background-repeat: no-repeat;
+  background-position: center center; /* Center the image */
+  background-size: 100% auto; /* Scale the image to fill height; width automatically adjusts to maintain aspect ratio */
+  overflow: hidden;
 }
