--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -913,7 +913,7 @@ progress {
   background-color: transparent;
 
   /* Progress bar value for IE10  */
-  color: var(--global-theme-color);
+  color: var(#00f0c3);
 }
 
 progress::-webkit-progress-bar {
@@ -921,11 +921,11 @@ progress::-webkit-progress-bar {
 }
 
 progress::-webkit-progress-value {
-  background-color: var(--global-theme-color);
+  background-color: var(#00f0c3);
 }
 
 progress::-moz-progress-bar {
-  background-color: var(--global-theme-color);
+  background-color: var(#00f0c3);
 }
 
 .progress-container {
@@ -939,7 +939,7 @@ progress::-moz-progress-bar {
 }
 
 .progress-bar {
-  background-color: var(--global-theme-color);
+  background-color: var(#00f0c3);
   width: 0%;
   display: block;
   height: inherit;
@@ -1398,10 +1398,31 @@ body  {
 
 .banner {
   background-image:
-      linear-gradient(to bottom, rgba(255,255,255,0), #2c2c2d),
+      linear-gradient(to bottom, rgba(0,0,0,0.2), #2c2c2d),
       url('/assets/img/close_up.png'); /* Replace with your image path */
   background-repeat: no-repeat;
   background-position: center center; /* Center the image */
   background-size: 100% auto; /* Scale the image to fill height; width automatically adjusts to maintain aspect ratio */
   overflow: hidden;
+}
+
+.focus {
+  background-image: linear-gradient(to bottom, #00f0c3D0, #00c0daB0);
+  border-radius: 10px;
+  box-shadow: #2c2c2d;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 30px;
+}
+
+.information {
+  text-align: center;
+  margin: 20px 40px;
+  padding: 10px 40px;
+  border-radius: 10px;
+  background-color: #2c2c2d;
+}
+
+#our-vision {
+  padding-left: 5%;
 }
