Polishing the image

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1401,6 +1401,11 @@ body  {
   h1 {
     font-size: 150%;
   }
+
+  #stem-description {
+    text-align: center;
+    font-size: 140%;
+  }
 }
 
 #about {
