--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -75,11 +75,12 @@
 }
 
 html[data-theme="dark"] {
-  --global-bg-color: #{$grey-color-dark};
+  --global-bg-accent: #{$bg-color-accent};
+  --global-bg-color: #{$bg-color-main};
   --global-code-bg-color: #{$code-bg-color-dark};
-  --global-text-color: #{$grey-color-light};
-  --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$cyan-color};
+  --global-text-color: #{$grey-color-text};
+  --global-text-color-light: #{$grey-color-light};
+  --global-theme-color: #{$sk-green};
   --global-hover-color: #{$cyan-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-light};
