--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,7 +25,8 @@ $pink-color-light: #ffdddd !default;
 $yellow-color: #efcc00 !default;
 
 $grey-color: #828282 !default;
-$grey-color-light: color.adjust($grey-color, $lightness: 40%);
+$grey-color-light: #e8e8e8;
+$grey-color-text: #a8a8a8;
 $grey-color-dark: #1c1c1d;
 $grey-900: #212529;
 
@@ -34,6 +35,9 @@ $black-color: #000000 !default;
 
 // Theme colors
 
+$bg-color-accent: #1c1c1d;
+$bg-color-main: #2c2c2d;
+$sk-green: #00f0c3;
 $code-bg-color-light: rgba($purple-color, 0.05);
 $code-bg-color-dark: #2c3237 !default;
 
