--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -42,6 +42,11 @@
 
       <div class="collapse navbar-collapse text-right" id="navbarNav">
         <ul class="navbar-nav nav-buttons flex-nowrap">
+          <li>
+            <div class="button_container" id="home">
+              <a class="nav-link" href="/">Home</a>
+            </div>
+          </li>
           {% for page in site.pages %}
             {% if page.permalink == '/' %} {% assign about_title = page.title %} {% endif %}
           {% endfor %}
